<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#D68B1C"
        android:gravity="center"
        android:text="@string/my_name_is_shivam_raj"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#E91E63"
        android:gravity="center"
        android:text="@string/roll_no_btech_15302_18"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/welcome_to_mobile_interface_lab"
        android:textSize="25sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/font_size_changer"
        android:textSize="25sp"
        app:icon="@android:drawable/ic_menu_zoom" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/font_color_changer"
        android:textSize="25sp"
        app:backgroundTint="#F10B0B"
        app:icon="?android:attr/textSelectHandle" />
</LinearLayout>
</ScrollView>
